force-app/main/default/objects/MaskJob__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MaskJob</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Job-{0000}</displayFormat>
        <label>MaskJob Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MaskJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>